@@ -66,6 +66,8 @@
 	Added system() builtin function that executes command via shell and returns
 	its output.
 
+	Added Ctrl-] command-line key to trigger abbreviation expansion.
+
 	Added 'iskeyword' option to specify which characters in command-line mode
 	should be considered as part of a word.  Thanks to filterfalse.
 
